--- a/index.html
+++ b/index.html
@@ -470,12 +470,11 @@
         </div>
       </div>
     </footer>
-    <script
-      id="__chatbotSdk__"
-      widgetUrl="http://localhost:1234"
-      baseUrl="http://localhost:8080"
-      src="http://localhost:1234/chatbot-sdk.js"
-      chatbotId="6625f4b28e24093193f16877"
-    ></script>
+  <script id="__chatbotSdk__"
+widgetUrl="https://mets.vip"
+baseUrl="https://mets.vip/api"
+src="https://mets.vip/chatbot-sdk.js"
+chatbotId="6625ebb0a63b0a875479835d">
+</script>
   </body>
 </html>
